cargo_check_output.txt
    Checking Rust_Gravity_3D v0.1.0 (C:\Users\23203\SynologyDrive\code\rust_galaxy)
error[E0425]: cannot find value `event_loop_window_target` in this scope
   --> src\main.rs:278:9
    |
278 |         event_loop_window_target.set_control_flow(ControlFlow::Poll);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `std::ffi::CString`
 --> src\graphics\shader.rs:2:5
  |
2 | use std::ffi::CString;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::ptr`
 --> src\graphics\shader.rs:3:5
  |
3 | use std::ptr;
  |     ^^^^^^^^

warning: unused imports: `MouseButton`, `MouseScrollDelta`, and `WindowEvent`
 --> src\ui\input.rs:1:34
  |
1 | use winit::event::{ElementState, WindowEvent, MouseButton, MouseScrollDelta};
  |                                  ^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `PhysicalKey`
 --> src\ui\input.rs:2:32
  |
2 | use winit::keyboard::{KeyCode, PhysicalKey};
  |                                ^^^^^^^^^^^

warning: unused import: `crate::constants::PI`
 --> src\utils\geometry.rs:2:5
  |
2 | use crate::constants::PI;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `geometry::GeometryUtils`
 --> src\utils\mod.rs:4:9
  |
4 | pub use geometry::GeometryUtils;
  |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `KeyCode`
  --> src\main.rs:11:23
   |
11 | use winit::keyboard::{KeyCode, PhysicalKey};
   |                       ^^^^^^^

warning: use of deprecated trait `winit::raw_window_handle::HasRawWindowHandle`: Use `HasWindowHandle` instead
  --> src\main.rs:17:31
   |
17 | use winit::raw_window_handle::HasRawWindowHandle;
   |                               ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `event_loop_window_target` found for struct `EventLoop<()>` in the current scope
  --> src\main.rs:58:16
   |
58 |     event_loop.event_loop_window_target(),
   |                ^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `EventLoop<()>`

error[E0308]: mismatched types
  --> src\main.rs:59:5
   |
57 |     let (window, gl_config) = display_builder.build(
   |                                               ----- arguments to this method are incorrect
58 |     event_loop.event_loop_window_target(),
59 |     template,
   |     ^^^^^^^^ expected `ConfigTemplateBuilder`, found `ConfigTemplate`
   |
note: method defined here
  --> C:\Users\23203\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\glutin-winit-0.4.2\src\lib.rs:89:12
   |
89 |     pub fn build<T, Picker>(
   |            ^^^^^

warning: use of deprecated method `winit::raw_window_handle::HasRawWindowHandle::raw_window_handle`: Use `HasWindowHandle` instead
  --> src\main.rs:74:36
   |
74 |     let raw_window_handle = window.raw_window_handle();
   |                                    ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NonZero<u32>: std::default::Default` is not satisfied
  --> src\main.rs:76:35
   |
76 |         .build(raw_window_handle, Default::default());
   |                                   ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `NonZero<u32>`

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> src\main.rs:76:10
    |
 76 |         .build(raw_window_handle, Default::default());
    |          ^^^^^--------------------------------------- argument #3 of type `NonZero<u32>` is missing
    |
note: expected `RawWindowHandle`, found `Result<RawWindowHandle, HandleError>`
   --> src\main.rs:76:16
    |
 76 |         .build(raw_window_handle, Default::default());
    |                ^^^^^^^^^^^^^^^^^
    = note: expected enum `raw_window_handle::RawWindowHandle`
               found enum `Result<RawWindowHandle, HandleError>`
note: method defined here
   --> C:\Users\23203\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\glutin-0.31.3\src\surface.rs:152:12
    |
152 |     pub fn build(
    |            ^^^^^
help: provide the argument
    |
 76 -         .build(raw_window_handle, Default::default());
 76 +         .build(/* raw_window_handle::RawWindowHandle */, Default::default(), /* NonZero<u32> */);
    |

error[E0599]: no variant or associated item named `new` found for enum `glutin::surface::Surface<T>` in the current scope
  --> src\main.rs:78:35
   |
78 |         glutin::surface::Surface::new(&gl_config.display(), gl_config, surface_attributes).unwrap()
   |                                   ^^^ variant or associated item not found in `glutin::surface::Surface<_>`

error[E0308]: mismatched types
  --> src\main.rs:82:73
   |
82 |     let context_attributes = ContextAttributesBuilder::new().build(Some(raw_window_handle));
   |                                                                    ---- ^^^^^^^^^^^^^^^^^ expected `RawWindowHandle`, found `Result<RawWindowHandle, HandleError>`
   |                                                                    |
   |                                                                    arguments to this enum variant are incorrect
   |
   = note: expected enum `raw_window_handle::RawWindowHandle`
              found enum `Result<RawWindowHandle, HandleError>`
help: the type constructed contains `Result<RawWindowHandle, HandleError>` due to the type of the argument passed
  --> src\main.rs:82:68
   |
82 |     let context_attributes = ContextAttributesBuilder::new().build(Some(raw_window_handle));
   |                                                                    ^^^^^-----------------^
   |                                                                         |
   |                                                                         this argument influences the type of `Some`
note: tuple variant defined here
  --> /rustc/e408947bfd200af42db322daf0fadfe7e26d3bd1/library\core\src\option.rs:608:4

error[E0308]: mismatched types
  --> src\main.rs:85:21
   |
85 |         .build(Some(raw_window_handle));
   |                ---- ^^^^^^^^^^^^^^^^^ expected `RawWindowHandle`, found `Result<RawWindowHandle, HandleError>`
   |                |
   |                arguments to this enum variant are incorrect
   |
   = note: expected enum `raw_window_handle::RawWindowHandle`
              found enum `Result<RawWindowHandle, HandleError>`
help: the type constructed contains `Result<RawWindowHandle, HandleError>` due to the type of the argument passed
  --> src\main.rs:85:16
   |
85 |         .build(Some(raw_window_handle));
   |                ^^^^^-----------------^
   |                     |
   |                     this argument influences the type of `Some`
note: tuple variant defined here
  --> /rustc/e408947bfd200af42db322daf0fadfe7e26d3bd1/library\core\src\option.rs:608:4

error[E0593]: closure is expected to take 2 arguments, but it takes 3 arguments
   --> src\main.rs:155:16
    |
155 |     event_loop.run(move |event, _, control_flow| {
    |                ^^^ ----------------------------- takes 3 arguments
    |                |
    |                expected closure that takes 2 arguments

error[E0599]: no variant or associated item named `Exit` found for enum `winit::event_loop::ControlFlow` in the current scope
   --> src\main.rs:161:50
    |
161 |                     *control_flow = ControlFlow::Exit;
    |                                                  ^^^^ variant or associated item not found in `winit::event_loop::ControlFlow`

error[E0308]: mismatched types
  --> src\main.rs:41:14
   |
41 | fn main() -> Result<(), Box<dyn std::error::Error>> {
   |    ----      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<(), Box<dyn Error>>`, found `()`
   |    |
   |    implicitly returns `()` as its body has no tail or `return` expression
   |
   = note:   expected enum `Result<(), Box<(dyn std::error::Error + 'static)>>`
           found unit type `()`

warning: variable `total_displacement` is assigned to, but never used
  --> src\utils\grid.rs:54:17
   |
54 |             let mut total_displacement = 0.0;
   |                 ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: consider using `_total_displacement` instead
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `total_displacement` is never read
  --> src\utils\grid.rs:63:17
   |
63 |                 total_displacement += z;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0061, E0277, E0308, E0425, E0593, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `Rust_Gravity_3D` (bin "Rust_Gravity_3D") generated 11 warnings
error: could not compile `Rust_Gravity_3D` (bin "Rust_Gravity_3D") due to 11 previous errors; 11 warnings emitted
